@@ -1,7 +1,9 @@
 package apt.auctionapi.service;
 
+import apt.auctionapi.controller.dto.request.AuctionSearchRequest;
 import apt.auctionapi.controller.dto.response.AuctionSummaryGroupedResponse;
 import apt.auctionapi.controller.dto.response.AuctionSummaryGroupedResponse.InnerAuctionSummaryResponse;
+import apt.auctionapi.domain.InvestmentTag;
 import apt.auctionapi.entity.Interest;
 import apt.auctionapi.entity.Member;
 import apt.auctionapi.entity.Tender;
@@ -11,13 +13,15 @@ import apt.auctionapi.repository.AuctionRepository;
 import apt.auctionapi.repository.InterestRepository;
 import apt.auctionapi.repository.TenderRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.geo.Box;
+import org.springframework.data.geo.Point;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.aggregation.*;
+import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -33,23 +37,146 @@ public class AuctionService {
     private final AuctionRepository auctionRepository;
     private final InterestRepository interestRepository;
     private final TenderRepository tenderRepository;
+    private final MongoTemplate mongoTemplate;
 
     public List<AuctionSummaryGroupedResponse> getAuctionsByLocationRange(
-            double lbLat,
-            double lbLng,
-            double rtLat,
-            double rtLng,
+            AuctionSearchRequest filter,
             Member member
     ) {
-        // DB에서 좌표 범위 내의 경매 데이터를 조회
-        List<AuctionSummary> auctionSummaries = auctionRepository.findByLocationRange(lbLat, lbLng, rtLat, rtLng);
+        Criteria criteria = buildCriteria(filter);
+        Aggregation aggregation = buildAggregation(criteria);
+        List<AuctionSummary> auctionSummaries = executeAggregation(aggregation);
+
+        // 유찰 횟수 필터 적용 (Java 코드에서)
+        if (filter.failedBidCount() != null && filter.failedBidCount() > 0) {
+            auctionSummaries = filterByRuptureCount(auctionSummaries, filter.failedBidCount());
+        }
+
+        // 투자 유형 태그 필터 적용 (Java 코드에서)
+        if (filter.investmentTags() != null && !filter.investmentTags().isEmpty()) {
+            auctionSummaries = filterByInvestmentTags(auctionSummaries, filter.investmentTags());
+        }
+
         if (member == null) {
             return getAuctionSummaryGroupedResponses(auctionSummaries, null, Collections.emptyList(), Collections.emptyList());
         }
+
         List<Interest> interests = interestRepository.findAllByMemberId(member.getId());
         List<Tender> tenders = tenderRepository.findAllByMemberId(member.getId());
 
         return getAuctionSummaryGroupedResponses(auctionSummaries, member, interests, tenders);
+    }
+
+    private List<AuctionSummary> filterByRuptureCount(List<AuctionSummary> auctionSummaries, int failedBidCount) {
+        return auctionSummaries.stream()
+                .filter(summary -> {
+                    int ruptureCount = getRuptureCount(summary);
+                    if (failedBidCount >= 6) {
+                        return ruptureCount >= 5; // 5회 이상 유찰
+                    } else {
+                        return ruptureCount == failedBidCount; // 특정 유찰 횟수
+                    }
+                })
+                .toList();
+    }
+
+    private List<AuctionSummary> filterByInvestmentTags(List<AuctionSummary> auctionSummaries, List<String> tagNames) {
+        if (tagNames == null || tagNames.isEmpty()) {
+            return auctionSummaries;
+        }
+
+        // 태그 이름을 InvestmentTag Enum으로 변환
+        List<InvestmentTag> requestedTags = tagNames.stream()
+                .map(name -> Arrays.stream(InvestmentTag.values())
+                        .filter(tag -> tag.getName().equals(name))
+                        .findFirst()
+                        .orElse(null))
+                .filter(Objects::nonNull)
+                .toList();
+
+        if (requestedTags.isEmpty()) {
+            return auctionSummaries;
+        }
+
+        return auctionSummaries.stream()
+                .filter(summary -> {
+                    // AuctionSummary에서 Auction 객체를 가져옴
+                    Auction auction = auctionRepository.findById(summary.getId()).orElse(null);
+                    if (auction == null) {
+                        return false;
+                    }
+
+                    // Auction 객체로부터 투자 유형 태그 목록을 가져옴
+                    List<InvestmentTag> auctionTags = InvestmentTag.from(auction);
+
+                    // 요청된 태그 중 하나라도 포함되어 있으면 필터링 통과
+                    return requestedTags.stream().anyMatch(auctionTags::contains);
+                })
+                .toList();
+    }
+
+    private Criteria buildCriteria(AuctionSearchRequest filter) {
+        Criteria locationCriteria = Criteria.where("auctionObject.location")
+                .within(new Box(
+                        new Point(filter.lbLng(), filter.lbLat()),
+                        new Point(filter.rtLng(), filter.rtLat())
+                ));
+
+        Criteria criteria = new Criteria().andOperator(locationCriteria);
+
+        // 태그 필터 적용 - Enum 사용
+        List<AuctionSearchRequest.AuctionTagFilter> tagList = filter.getTagList();
+        if (!tagList.isEmpty()) {
+            List<String> tagDisplayNames = tagList.stream().map(AuctionSearchRequest.AuctionTagFilter::getDisplayName).toList();
+            criteria.and("auctionObject.rletDvsDts").in(tagDisplayNames);
+        }
+
+        if (filter.minBidPrice() != null) {
+            criteria.and("auctionObject.aeeEvlAmt").gte(filter.minBidPrice());
+        }
+
+        return criteria;
+    }
+
+    private Aggregation buildAggregation(Criteria criteria) {
+        ProjectionOperation projectStage = Aggregation.project()
+                .and("id").as("id")
+                .and("caseBaseInfo").as("caseBaseInfo")
+                .and(ArrayOperators.ArrayElemAt.arrayOf("gdsDspslObjctLst").elementAt(0))
+                .as("auctionObject");
+
+        MatchOperation matchStage = Aggregation.match(criteria);
+
+        return Aggregation.newAggregation(
+                projectStage,
+                matchStage
+        );
+    }
+
+    private List<AuctionSummary> executeAggregation(Aggregation aggregation) {
+        AggregationResults<AuctionSummary> results = mongoTemplate.aggregate(
+                aggregation, "detail_auctions", AuctionSummary.class);
+
+        return results.getMappedResults();
+    }
+
+    // AuctionSummary에서 유찰 횟수를 계산하는 메서드
+    private int getRuptureCount(AuctionSummary auctionSummary) {
+        // AuctionSummary에서 Auction 객체를 가져오는 방법에 따라 수정 필요
+        Auction auction = auctionRepository.findById(auctionSummary.getId())
+                .orElse(null);
+        return getRuptureCount(auction);
+    }
+
+    // 기존 유찰 횟수 계산 메서드
+    private Integer getRuptureCount(Auction auction) {
+        if (auction == null || auction.getAuctionScheduleList() == null) {
+            return 0; // auction 또는 일정 리스트가 없으면 0 반환
+        }
+
+        return (int) auction.getAuctionScheduleList().stream()
+                .filter(schedule -> "002".equals(schedule.getAuctionResultCode())) // 유찰 코드 필터링
+                .count();
     }
 
     private List<AuctionSummaryGroupedResponse> getAuctionSummaryGroupedResponses(
@@ -63,11 +190,17 @@ public class AuctionService {
                 .collect(Collectors.groupingBy(
                         auction -> auction.getAuctionObject().getLatitude() + "," + auction.getAuctionObject().getLongitude(),
                         Collectors.mapping(
-                                auction -> InnerAuctionSummaryResponse.of(
-                                        auction,
-                                        isInterestedAuction(member, auction, interests),
-                                        isTenderedAuction(member, auction, tenders)
-                                ),
+                                auction -> {
+                                    // Auction 객체에서 투자 유형 태그 목록 가져오기
+                                    List<InvestmentTag> investmentTags = getInvestmentTags(auction);
+
+                                    return InnerAuctionSummaryResponse.of(
+                                            auction,
+                                            isInterestedAuction(member, auction, interests),
+                                            isTenderedAuction(member, auction, tenders),
+                                            investmentTags
+                                    );
+                                },
                                 Collectors.toList()
                         )
                 ));
@@ -86,16 +219,25 @@ public class AuctionService {
                             .auctions(entry.getValue())  // 해당 좌표에 속한 경매 리스트
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    // AuctionSummary에서 투자 유형 태그 목록을 가져오는 메서드
+    private List<InvestmentTag> getInvestmentTags(AuctionSummary auctionSummary) {
+        Auction auction = auctionRepository.findById(auctionSummary.getId()).orElse(null);
+        if (auction == null) {
+            return Collections.emptyList();
+        }
+        return InvestmentTag.from(auction);
     }
 
     private Boolean isInterestedAuction(Member member, AuctionSummary auction, List<Interest> interests) {
-        if (member != null) return false;
+        if (member == null) return false;
         return interests.stream().map(Interest::getAuctionId).anyMatch(it -> it.equals(auction.getId()));
     }
 
     private Boolean isTenderedAuction(Member member, AuctionSummary auction, List<Tender> tenders) {
-        if (member != null) return false;
+        if (member == null) return false;
         return tenders.stream().map(Tender::getAuctionId).anyMatch(it -> it.equals(auction.getId()));
     }
 
@@ -119,9 +261,21 @@ public class AuctionService {
             interestRepository.delete(existingInterest.get()); // 이미 존재하면 삭제
         } else {
             interestRepository.save(Interest.builder()
-                .member(member)
-                .auctionId(id)
-                .build()); // 존재하지 않으면 추가
+                    .member(member)
+                    .auctionId(id)
+                    .build()); // 존재하지 않으면 추가
         }
+    }
+
+    /**
+     * 경매 객체의 투자 유형 태그 목록을 반환합니다.
+     *
+     * @param auctionId 경매 ID
+     * @return 투자 유형 태그 목록
+     */
+    public List<InvestmentTag> getInvestmentTagsForAuction(String auctionId) {
+        Auction auction = auctionRepository.findById(auctionId)
+                .orElseThrow(() -> new IllegalArgumentException("Auction not found"));
+        return InvestmentTag.from(auction);
     }
 }
